--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -2,8 +2,40 @@
     General Styles
 */
 div.scrollmenu {
-//   background-color: #333;
+  background-color: rgba(255, 255, 255, 0);
   overflow: auto;
   white-space: nowrap;
 }
 
+.scrollmenu-hidden::-webkit-scrollbar {
+  display: none;
+}
+
+.Home {
+    background-image: url(../img/unnamed.jpg);
+    background-color: #cccccc;
+}
+
+
+// body {
+//     background-image: url("../img/unnamed.jpg");
+//     background-repeat: no-repeat;
+//     background-attachment: fixed;
+//     background-size: cover;
+// }
+
+// .h1, h2, a, p{
+//     color: white;
+// }
+
+// div.scrollmenu a {
+//   display: inline-block;
+//   color: white;
+//   text-align: center;
+//   padding: 14px;
+//   text-decoration: none;
+// }
+
+// div.scrollmenu a:hover {
+//   background-color: #777;
+// }
